# cityrade-wsl

backend/: Cargo.toml
backend/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: building.rs  coordinates.rs  lib.rs  weather.rs  world.rs
common/src/net/: event.rs
mcp/: main.py  pyproject.toml
server/: Cargo.toml
server/src/: event.rs  main.rs
