[package]
name = "cityrade-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
bincode = { version = "2.0.1", features = ["serde"] }
cityrade-common = { version = "0.1.0", path = "../common" }
serde = { version = "1.0.225", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1.41"
