[package]
name = "cityrade-common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bincode = "2.0.1"
derive_more = { version = "2.0.1", features = ["display"] }
hashbrown = "0.16.0"
noise = "0.9.0"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.225", features = ["derive"] }
smallvec = { version = "1.15.1", features = ["serde"] }
tokio = { version = "1.47.1", features = ["sync"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "v7"] }
