[package]
name = "cityrade-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bincode = { version = "2.0.1", features = ["derive", "serde"] }
derive_more = { version = "2.0.1", features = ["display"] }
serde = { version = "1.0.225", features = ["derive"] }
tokio = { version = "1.47.1", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
